--- a/admin/static/css/components/_index.scss
+++ b/admin/static/css/components/_index.scss
@@ -1,5 +1,6 @@
 @import './c-nav';
 @import './c-carousel';
+@import './c-accordion';
 @import './c-infobar';
 @import './c-form';
 @import './c-ib-popups';
