--- a/admin/static/html/components/infobar.html
+++ b/admin/static/html/components/infobar.html
@@ -1,20 +1,20 @@
-<div class="c-infobar">
+<header class="c-infobar">
     <div class="c-infobar__left">
-        <button class="c-infobar__action c-infobar__js" title="Přehled oznámení">
+        <button class="c-infobar__action c-infobar__js" title="Přehled oznámení" aria-label="Přehled oznámení">
             <img src="/admin/static/icons/bell.svg" alt="Ikona zvonku">
             <?// V případě plnosti bych tam dal bell-fill?>
         </button>
-        <button class="c-infobar__action c-infobar__js" title="Přehled zpráv">
+        <button class="c-infobar__action c-infobar__js" title="Přehled zpráv" aria-label="Přehled zpráv">
             <img src="/admin/static/icons/envelope.svg" alt="Ikona poštovní obálky">
         </button>
-        <a class="c-infobar__action" title="Vyhledávání">
+        <a class="c-infobar__action" title="Vyhledávání" aria-label="Vyhledávání">
             <img src="/admin/static/icons/search.svg" alt="Ikona lupy">
         </a>
-        <a href="/admin/categories/dashboard/" class="c-infobar__action" title="Zpět na Dashboard">
+        <a href="/admin/categories/dashboard/" class="c-infobar__action" title="Zpět na Dashboard" aria-label="Zpět na Dashboard">
             <img src="/admin/static/icons/house.svg" alt="Ikona domečku">
         </a>
     </div>
-    <p class="c-infobar__center">
+    <p class="c-infobar__center" role="heading">
         <?=$PI -> name?>
     </p>
     <button class="c-infobar__right c-infobar__js">
@@ -25,4 +25,4 @@
             <div class="temp-circle"></div>
         </div>
     </button>
-</div>
+</header>
