Příprava na kódování utile formy

--- a/admin/static/css/components/_index.scss
+++ b/admin/static/css/components/_index.scss
@@ -1,6 +1,7 @@
 @import './c-nav';
 @import './c-carousel';
 @import './c-accordion';
+@import './c-u-form';
 @import './c-infobar';
 @import './c-form';
 @import './c-ib-popups';
