--- a/admin/static/css/index.scss
+++ b/admin/static/css/index.scss
@@ -1,4 +1,5 @@
 @import './functions/index';
 @import './atoms/index';
+@import './.DS_Store/index';
 @import './components/index';
 @import './layouts/index';
