--- a/admin/static/css/components/_c-accordion.scss
+++ b/admin/static/css/components/_c-accordion.scss
@@ -66,7 +66,7 @@
 
 		text-align: left;
 
-		transition: max-height .2s ease-in,
+		transition: max-height .2s ease-in-out,
 					background-color .2s ease-in-out;
 
 		@media (min-width: breakpoint(sm)) {
@@ -137,7 +137,7 @@
 
 		max-height: 0px;
 		overflow: hidden;
-		transition: max-height .2s ease-out;
+		transition: max-height .2s ease-in-out;
 
 		&--no-animation {
 
