--- a/admin/static/css/functions/_functions.scss
+++ b/admin/static/css/functions/_functions.scss
@@ -8,6 +8,7 @@
         'mid-grey': #C4C4C4,
         'success': #28a745,
         'danger': #dc3545,
+        'warning': #ffc107,
         'blue': #1a80ee,
         'dark-success': darken(#28a745, 13%),
         'light-black': #222,
